
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".HeartRateScanActivity">

    <TextView
        android:id="@+id/tvHeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvStressLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stress_level"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/save_data"
        android:textColor="@android:color/white" />
</LinearLayout>
