<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxedEdges="all">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnStartHeartRateScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/start_heart_rate_scan"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnShowPreviousData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnStartHeartRateScan"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/show_previous_data"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnSleepTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnShowPreviousData"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/sleep_tracking"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
